[gd_scene load_steps=3 format=2]

[ext_resource path="res://GUI/Backpack.gd" type="Script" id=1]
[ext_resource path="res://GUI/backpack.png" type="Texture" id=2]

[node name="Backpack" type="Control"]
script = ExtResource( 1 )

[node name="Main" type="MarginContainer" parent="."]
margin_right = 273.0
margin_bottom = 283.0
mouse_filter = 1
mouse_default_cursor_shape = 6
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="NinePatchRect" type="NinePatchRect" parent="Main"]
margin_right = 273.0
margin_bottom = 283.0
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 310, 463 )
patch_margin_left = 55
patch_margin_top = 85
patch_margin_right = 60
patch_margin_bottom = 40

[node name="MarginContainer" type="MarginContainer" parent="Main"]
margin_right = 273.0
margin_bottom = 283.0
mouse_filter = 2
custom_constants/margin_right = 60
custom_constants/margin_top = 85
custom_constants/margin_left = 55
custom_constants/margin_bottom = 40

[node name="ColorRect" type="ColorRect" parent="Main/MarginContainer"]
margin_left = 55.0
margin_top = 85.0
margin_right = 213.0
margin_bottom = 243.0
color = Color( 0, 0, 0, 0.731961 )

[node name="GridContainer" type="GridContainer" parent="Main/MarginContainer"]
margin_left = 55.0
margin_top = 85.0
margin_right = 213.0
margin_bottom = 243.0
columns = 2

[node name="Content" type="Control" parent="Main/MarginContainer/GridContainer"]
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VSlider" type="VSeparator" parent="Main/MarginContainer/GridContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 154.0
margin_right = 158.0
margin_bottom = 150.0
mouse_default_cursor_shape = 10

[node name="HSlider" type="HSeparator" parent="Main/MarginContainer/GridContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 154.0
margin_right = 150.0
margin_bottom = 158.0
mouse_default_cursor_shape = 9

[node name="Control" type="Control" parent="Main/MarginContainer/GridContainer"]
margin_left = 154.0
margin_top = 154.0
margin_right = 158.0
margin_bottom = 158.0
mouse_default_cursor_shape = 12
[connection signal="gui_input" from="Main" to="." method="_on_Main_gui_input"]
[connection signal="gui_input" from="Main/MarginContainer/GridContainer/VSlider" to="." method="_on_VSlider_gui_input"]
[connection signal="gui_input" from="Main/MarginContainer/GridContainer/HSlider" to="." method="_on_HSlider_gui_input"]
[connection signal="gui_input" from="Main/MarginContainer/GridContainer/Control" to="." method="_on_Control_gui_input"]
